@jmarcos-cano - adds more to README, adds FOO var

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         -webkit-box-sizing: content-box;
         -moz-box-sizing: content-box;
         box-sizing: content-box;
-        width: 410px;
+        width: 490px;
         padding: 20px;
         overflow: hidden;
         border: none;
@@ -38,5 +38,7 @@
           Hostname: {{hostname}}
           <br>
           Task: {{DOCKER_SERVICE_NAME}}
+          <br>
+          FOO: {{FOO}}
       </div>
    </body>
