--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
         left: 34%;
     }
     </style>
-    <header>
+<!--     <header>
         <img class="img" src="https://lh3.googleusercontent.com/-hJ2rXeGXaF4/Wql_QzNTb3I/AAAAAAAAb7o/tt92qpBuFkc5uaLLi5lXkC-dQA-ivKdAQCJoC/w1920-h1080/google_io_2018_extended_hashtag_white_16x9_rgb.png" width="487" height="274" >
-    </header>
+    </header> -->
    <body>
       <div class="enjoy-css">
           Visits: {{ visit_counts }}
