--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,29 @@
 <!doctype html>
 <html>
-    <style>
-    .enjoy-css {
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-        box-sizing: content-box;
-        width: 490px;
-        padding: 20px;
-        overflow: hidden;
-        border: none;
-        font: normal 30px/3 "Lucida Console", Monaco, monospace;
-        color: rgba(255,255,255,1);
-        text-align: center;
-        -o-text-overflow: ellipsis;
-        text-overflow: ellipsis;
-        word-spacing: 6px;
-        background: #5042d6;
-        -webkit-box-shadow: 5px 5px 5px 0 rgba(54,56,109,0.3) ;
-        box-shadow: 5px 5px 5px 0 rgba(54,56,109,0.3) ;
-        text-shadow: 3px 3px 3px rgba(0,0,0,0.2) ;
-        position: absolute; /* or absolute */
-        top: 40%;
-        left: 35%;
-        }
-    .img {
-        position: fixed; /* or absolute */
-        left: 34%;
-    }
-    </style>
-<!--     <header>
-        <img class="img" src="https://lh3.googleusercontent.com/-hJ2rXeGXaF4/Wql_QzNTb3I/AAAAAAAAb7o/tt92qpBuFkc5uaLLi5lXkC-dQA-ivKdAQCJoC/w1920-h1080/google_io_2018_extended_hashtag_white_16x9_rgb.png" width="487" height="274" >
-    </header> -->
+    <head>
+            <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+            <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Exo&amp;display=swap'>
+            <link rel="stylesheet" href="static/style.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+
+
    <body>
-      <div class="enjoy-css">
-          Visits: {{ visit_counts }}
-          <br>
-          Hostname: {{hostname}}
-          <br>
-          Task: {{DOCKER_SERVICE_NAME}}
-          <br>
-          FOO: {{FOO}}
+        <div class="container ">
+            <h1>Docker Intro</h1>
+            <br>
+            <h3>Visitas: {{ visit_counts }} </h3>
+
+            <h3>Hostname: {{hostname}}</h3>
+
+            <h3>Task: {{DOCKER_SERVICE_NAME}}</h3>
+
+            <h3>FOO: {{FOO}}</h3>
+            <br>
+            <h4>Marcos Cano @<a href="https://twitter.com/marcos_kno">marcos_kno</a></h2>
       </div>
+      <br>
+
+
    </body>
