@jmarcos-cano - docker101

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,15 @@
             <h1>Docker Intro</h1></li>
             <br>
 
-                <h3>Visitas:   {{ visit_counts }} </h3>
+                <h3>Visits:   {{ visit_counts }} </h3>
 
                 <h3>Hostname:  {{hostname}}</h3>
 
                 <h3>Task: {{DOCKER_SERVICE_NAME}}</h3>
 
                 <h3>FOO: {{FOO}}</h3>
+
+                <h3>Redis: {{redis_host}}</h3>
 
             <br>
             <h4>Marcos Cano @<a href="https://twitter.com/marcos_kno">marcos_kno</a></h2>
